--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokayeSS",
+  "name": "SSfgdrger",
   "version": "4.0.2",
   "description": "Shadowsocks over WebSocket",
   "scripts": {
@@ -7,9 +7,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/isfruitage/pokayeSS.git"
+    "url": "https://github.com/kopertete/SSfgdrger.git"
   },
-  "homepage": "https://github.com/isfruitage/pokayeSS",
+  "homepage": "https://github.com/kopertete/SSfgdrger",
   "license": "MIT",
   "dependencies": {
     "colors": "^1.4.0",
